try fix split file 03 and clean

--- a/.github/workflows/rpi4-matrix-development.yaml
+++ b/.github/workflows/rpi4-matrix-development.yaml
@@ -51,10 +51,6 @@ jobs:
           bigbranch: ${{ matrix.bigbranch }}
           version: ${{ steps.time.outputs.time }}
           tmate: ${{ inputs.debug_enabled }}
-          # if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
-          # overlay-repo: https://repo.biglinux.com.br/stable/$arch/biglinux-stable.db
-          #gpg-key: ${{ secrets.CI_GPG_SECRET }}
-          #gpg-passphrase: ${{ secrets.CI_GPG_PASSPHRASE }}
           
       - name: Release Upload
         uses: softprops/action-gh-release@v0.1.15
@@ -66,15 +62,12 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            ${{ env.FILE_PATH }}
             ${{ env.FILE_PATH_ZIP }}
             ${{ env.FILE_PATH_Z01 }}
-            #${{ env.FILE_SHA1 }}
+            ${{ env.FILE_PKG }}
             ${{ env.FILE_SHA256 }}
             ${{ env.FILE_TORRENT }}
-            ${{ env.FILE_PKG }}
-            #${{ env.FILE_SIG }}
             
-      # - name: Tmate if failure
-      #   if: ${{ failure() }}
-      #   uses: mxschmitt/action-tmate@v3
+      - name: Tmate if failure
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
